# speechd

./: .gitignore  ANNOUNCE  AUTHORS  BUGS  COPYING.LGPL  ChangeLog  FAQ  INSTALL  INSTALL.in  Makefile  Makefile.am  Makefile.config  NEWS  README  README.details.md  README.md  README.overview.md  README.packagers  README.style  README.style.md  README.translators  TODO  VERSION  aclocal.m4  build.sh  config.h.in  config.h.in.in  configure  configure.ac  configure.in  git-version-gen  git.mk  import-nvda.sh  libtool  mkinstalldirs  robod.conf  run-spd-say.in  run-speechd.in  speech-dispatcher.pc.in  speech-dispatcher.service.in  (+5 more)
config/modules/: .gitignore  Makefile.am  README  apollo.conf  baratinoo.conf  cicero.conf  cxxpiper.conf  dtk-generic.conf  epos-generic.conf  espeak-generic.conf  espeak-mbrola-generic.conf  espeak-ng-mbrola-generic.conf  espeak-ng-mbrola.conf  espeak-ng.conf  espeak.conf  festival.conf  flite.conf  ibmtts.conf  ivona.conf  kali.conf  llia_phon-generic.conf  mary-generic-disabled.conf  mary-generic.conf  mimic3-generic.conf  openjtalk.conf  pico-generic.conf  pico.conf  piper.conf  swift-generic.conf  voxin.conf
doc/: .gitignore  ChangeLog  Makefile  Makefile.am  README  analysis.xml  design.xml  fdl.texi  gpl.texi  html.dsl  implementation.xml  intro.xml  preface.xml  robod.xml  spd-say.html  spd-say.texi  speech-dispatcher-cs.html  speech-dispatcher-cs.texi  speech-dispatcher.html  speech-dispatcher.texi  speechd-cs.texi  speechd.client.SSIPClient.html  speechd.client.Speaker.html  speechd.client.html  speechd.html  speechd.texi  speechd.xml  ssip.html  ssip.texi  version.texi
doc/figures/: README  architecture.dia  architecture.eps  architecture.txt  priorities.dia  priorities.eps  priorities.txt
doc/html/: book1.html  c100.html  c101.html  c103.html  c11.html  c112.html  c17.html  c29.html  c30.html  c33.html  c39.html  c44.html  c45.html  c48.html  c54.html  c55.html  c56.html  c58.html  c59.html  c65.html  c72.html  c87.html  c88.html  c94.html  c98.html  c99.html  f14.html  f8.html  g106.html  g107.html  g120.html  g63.html  g64.html  g67.html  g73.html  x102.html  x103.html  x104.html  x108.html  x109.html  (+22 more)
locale/: .gitignore  Makefile.am  README.md  import-orca  import-symbols.py  orca.polist  orca.sym
locale/af/: emojis.dic
locale/ak/: emojis.dic
locale/am/: emojis.dic  symbols.dic
locale/an/: orca-chars.dic  orca.dic  orca_chars.dic  symbols.dic
locale/ar/: emojis.dic  orca-chars.dic  orca.dic  symbols.dic
locale/ar_SA/: emojis.dic
locale/as/: emojis.dic
locale/ast/: emojis.dic  orca-chars.dic  orca.dic
locale/az/: emojis.dic
locale/ba/: emojis.dic
locale/base/: font-variants.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/be/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/bew/: emojis.dic
locale/bg/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/bgn/: emojis.dic
locale/blo/: emojis.dic
locale/bn/: emojis.dic  orca-chars.dic  orca.dic  symbols.dic
locale/bn_IN/: orca-chars.dic  orca.dic  orca_chars.dic
locale/br/: emojis.dic
locale/bs/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/ca/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/ca@valencia/: orca-chars.dic  orca-math.dic  orca.dic
locale/ca_ES_VALENCIA/: emojis.dic
locale/ccp/: emojis.dic
locale/ceb/: emojis.dic
locale/chr/: emojis.dic
locale/ckb/: emojis.dic  orca-math.dic  symbols.dic
locale/cs/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/cv/: emojis.dic
locale/cy/: emojis.dic  orca.dic  orca_chars.dic
locale/da/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/de/: emojis.dic  gender-neutral.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/de_CH/: emojis.dic  symbols.dic
locale/doi/: emojis.dic
locale/dsb/: emojis.dic
locale/dz/: orca.dic  orca_chars.dic
locale/el/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/en/: emojis.dic  font-variants.dic  symbols.dic
locale/en_AU/: emojis.dic
locale/en_CA/: emojis.dic  orca.dic  orca_chars.dic
locale/en_GB/: emojis.dic  orca-math.dic  orca.dic  orca_chars.dic
locale/en_IN/: emojis.dic
locale/eo/: orca-chars.dic  orca-math.dic  orca.dic
locale/es/: emojis.dic  gender-neutral.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/es_419/: emojis.dic
locale/es_CO/: symbols.dic
locale/es_MX/: emojis.dic
locale/es_US/: emojis.dic
locale/et/: emojis.dic  orca.dic  orca_chars.dic
locale/eu/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic
locale/fa/: emojis.dic  orca-math.dic  symbols.dic
locale/ff/: emojis.dic
locale/ff_Adlm/: emojis.dic
locale/fi/: emojis.dic  orca-chars.dic  orca.dic  orca_chars.dic  symbols.dic
locale/fil/: emojis.dic
locale/fo/: emojis.dic
locale/fr/: emojis.dic  gender-neutral.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/fr_CA/: emojis.dic
locale/frr/: emojis.dic
locale/fur/: orca.dic  orca_chars.dic
locale/ga/: emojis.dic  orca.dic  orca_chars.dic  symbols.dic
locale/gd/: emojis.dic
locale/gl/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/gu/: emojis.dic  orca.dic  orca_chars.dic
locale/ha/: emojis.dic
locale/ha_NE/: emojis.dic
locale/he/: emojis.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/hi/: emojis.dic  orca-chars.dic  orca.dic  orca_chars.dic  symbols.dic
locale/hi_Latn/: emojis.dic
locale/hr/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  orca_chars.dic  symbols.dic
locale/hsb/: emojis.dic
locale/hu/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic  symbols.dic
locale/hy/: emojis.dic
locale/ia/: emojis.dic
locale/id/: emojis.dic  orca-chars.dic  orca-math.dic  orca.dic
locale/ig/: emojis.dic
locale/is/: emojis.dic  orca-chars.dic  orca.dic  orca_chars.dic  symbols.dic
src/: Makefile.am
(+612 files in other folders)
