
info_TEXINFOS = ssip.texi speech-dispatcher.texi spd-say.texi speech-dispatcher-cs.texi
EXTRA_DIST = figures

speech_dispatcher_TEXINFOS = gpl.texi fdl.texi speech-dispatcher.texi
speech_dispatcher_cs_TEXINFOS = gpl.texi fdl.texi speech-dispatcher-cs.texi
ssip_TEXINFOS = gpl.texi fdl.texi

CLEANFILES = mdate-sh \
	spd-say.info \
	speech-dispatcher-cs.info \
	speech-dispatcher.info \
	ssip.info \
	stamp-1 \
	stamp-vti \
	texinfo.tex \
	version-2.texi \
	version.texi

-include $(top_srcdir)/git.mk
