## Process this file with automake to produce Makefile.in

nobase_localedata_DATA = \
	an/symbols.dic \
	ar/symbols.dic \
	bg/symbols.dic \
	ca/symbols.dic \
	cs/symbols.dic \
	da/symbols.dic \
	de/symbols.dic \
	el/symbols.dic \
	en/symbols.dic \
	es/symbols.dic \
	es_CO/symbols.dic \
	fa/symbols.dic \
	fi/symbols.dic \
	fr/symbols.dic \
	ga/symbols.dic \
	gl/symbols.dic \
	he/symbols.dic \
	hi/symbols.dic \
	hr/symbols.dic \
	hu/symbols.dic \
	is/symbols.dic \
	it/symbols.dic \
	ja/symbols.dic \
	ka/symbols.dic \
	kn/symbols.dic \
	ko/symbols.dic \
	lt/symbols.dic \
	my/symbols.dic \
	nb_NO/symbols.dic \
	nl/symbols.dic \
	nn_NO/symbols.dic \
	pa/symbols.dic \
	pl/symbols.dic \
	pt_BR/symbols.dic \
	pt_PT/symbols.dic \
	ro/symbols.dic \
	ru/symbols.dic \
	sk/symbols.dic \
	sl/symbols.dic \
	sq/symbols.dic \
	sr/symbols.dic \
	sv/symbols.dic \
	ta/symbols.dic \
	tr/symbols.dic \
	uk/symbols.dic \
	vi/symbols.dic \
	zh/symbols.dic \
	zh_CN/symbols.dic \
	zh_HK/symbols.dic \
	zh_TW/symbols.dic

EXTRA_DIST = ${nobase_localedata_DATA}

-include $(top_srcdir)/git.mk
